--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -31,7 +31,8 @@ services:
       - kafka
     environment:
       - KAFKA_BOOTSTRAP_SERVERS=${KAFKA_BOOTSTRAP_SERVERS}
-      - KAFKA_TOPIC=${KAFKA_TOPIC}
+      - VALID_TOPIC=${VALID_TOPIC}
+      - INVALID_TOPIC=${INVALID_TOPIC}
       - DATA_INTERVAL_SECONDS=${DATA_INTERVAL_SECONDS}
       - ERROR_FREQ=${ERROR_FREQ}
     restart: always
