--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,3 @@
-version: '3.8'
-
 services:
   zookeeper:
     image: bitnami/zookeeper:3.8
@@ -23,16 +21,38 @@ services:
     ports:
       - "9092:9092"
 
+    # HEALTHCHECK
+    healthcheck:
+      test: ["CMD", "kafka-topics.sh", "--bootstrap-server", "localhost:9092", "--list"]
+      interval: 10s
+      timeout: 5s
+      retries: 10
+      start_period: 20s
+
   simulator:
     build:
       context: ./simulator
     container_name: simulator
     depends_on:
-      - kafka
+      kafka:
+        condition: service_healthy
     environment:
       - KAFKA_BOOTSTRAP_SERVERS=${KAFKA_BOOTSTRAP_SERVERS}
       - VALID_TOPIC=${VALID_TOPIC}
       - INVALID_TOPIC=${INVALID_TOPIC}
       - DATA_INTERVAL_SECONDS=${DATA_INTERVAL_SECONDS}
       - ERROR_FREQ=${ERROR_FREQ}
+    restart: always
+
+  consumer:
+    build:
+      context: ./consumer
+    container_name: consumer
+    depends_on:
+      kafka:
+        condition: service_healthy
+    environment:
+      - KAFKA_BOOTSTRAP_SERVERS=${KAFKA_BOOTSTRAP_SERVERS}
+      - VALID_TOPIC=${VALID_TOPIC}
+      - INVALID_TOPIC=${INVALID_TOPIC}
     restart: always
