--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -29,6 +29,18 @@ services:
       retries: 10
       start_period: 20s
 
+  postgres:
+    image: postgres:15
+    container_name: postgres
+    environment:
+      POSTGRES_DB: ${DB_NAME}
+      POSTGRES_USER: ${DB_USER}
+      POSTGRES_PASSWORD: ${DB_PASSWORD}
+    ports:
+      - "5432:5432"
+    volumes:
+      - pgdata:/var/lib/postgresql/data
+
   simulator:
     build:
       context: ./simulator
@@ -51,8 +63,19 @@ services:
     depends_on:
       kafka:
         condition: service_healthy
+      postgres:
+        condition: service_started
     environment:
       - KAFKA_BOOTSTRAP_SERVERS=${KAFKA_BOOTSTRAP_SERVERS}
       - VALID_TOPIC=${VALID_TOPIC}
       - INVALID_TOPIC=${INVALID_TOPIC}
+      - CONSUMER_GROUP_ID=${CONSUMER_GROUP_ID}
+      - DB_HOST=${DB_HOST}
+      - DB_PORT=${DB_PORT}
+      - DB_NAME=${DB_NAME}
+      - DB_USER=${DB_USER}
+      - DB_PASSWORD=${DB_PASSWORD}
     restart: always
+
+volumes:
+  pgdata:
