--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -103,30 +103,8 @@ services:
           /opt/spark-apps/kafka_to_postgres.py
         "
     ports:
-      - "4040:4040"
-    restart: "no"
-
-
-
-  # spark:
-  #   image: apache/spark:3.5.0
-  #   container_name: spark
-  #   depends_on:
-  #     kafka:
-  #       condition: service_healthy
-  #     postgres:
-  #       condition: service_started
-  #   user: root
-  #   volumes:
-  #     - ./spark-apps:/opt/spark-apps
-  #     - spark_checkpoints:/opt/spark-checkpoints
-  #   command: >
-  #     bash -c "mkdir -p /opt/spark-checkpoints/ward_fill_level_aggregation_v1 &&
-  #             chown -R spark:spark /opt/spark-checkpoints &&
-  #             su spark -c '/opt/spark/bin/spark-submit --master local[*] --conf spark.jars.ivy=/tmp/.ivy2 --packages org.apache.spark:spark-sql-kafka-0-10_2.12:3.5.0,org.postgresql:postgresql:42.7.1 /opt/spark-apps/kafka_to_postgres.py'"
-  #   restart: "no" # IMPORTANT: Spark should NOT auto-restart
-  #   ports:
-  #     - "4040:4040"  # Spark Web UI
+      - "4040:4040" # Spark Web UI
+    restart: "no" # IMPORTANT: Spark should NOT auto-restart on failure to avoid duplicate processing
 
 volumes:
   pgdata:
