--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -123,6 +123,17 @@ services:
       - "8000:8000"
     restart: unless-stopped
 
+  redis:
+    image: redis:7
+    container_name: redis
+    environment:
+      REDIS_HOST: redis
+      REDIS_PORT: 6379
+    ports:
+      - "6379:6379"
+    restart: unless-stopped
+
+
 volumes:
   pgdata:
   spark_checkpoints:
